# Password-Manager

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  steup.py
src/password_manager/: cli.py  crypto.py  gui.py  utils.py  vault.py
src/password_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_crypto.py  test_utils.py  test_vault.py
